--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -425,7 +425,7 @@ table {
   img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .card-content {
